--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@emotion/styled": "^11.11.0",
         "framer-motion": "^10.16.1",
         "react": "^18.2.0",
+        "react-confetti-explosion": "^2.1.2",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
